--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -31,7 +31,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Conjuntos</a></li>
-                        <li><a class="dropdown-item" href="#">Agregar Conjuntos</a></li>
+                        <li><a class="dropdown-item" href="./list">Agregar Conjuntos</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
