--- a/src/views/productos/list.hbs
+++ b/src/views/productos/list.hbs
@@ -31,10 +31,10 @@
                     <td>
                         
                         <div class="btn-group">
-                            <a href="/edit/{{id}}" class="btn btn-warning p-2">
+                            <a href="/edit/{{id_producto}}" class="btn btn-warning p-2">
                                 <i class="fa-solid fa-pencil"></i>
                             </a>
-                            <a href="/delete/{{id}}" class="btn btn-danger p-2">
+                            <a href="/delete/{{id_producto}}" class="btn btn-danger p-2">
                                 <i class="fa-solid fa-trash"></i>
                             </a>
                         </div>
