Creamos la vista add, la ruta y el post del add. Ademas corregimos errores

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -5,7 +5,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id_producto="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -30,8 +30,8 @@
                         Productos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Conjuntos</a></li>
-                        <li><a class="dropdown-item" href="/list">Agregar Conjuntos</a></li>
+                        <li><a class="dropdown-item" href="/list">Conjuntos</a></li>
+                        <li><a class="dropdown-item" href="/add">Agregar Conjuntos</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
