--- a/src/views/productos/list.hbs
+++ b/src/views/productos/list.hbs
@@ -21,7 +21,7 @@
 
                 {{#each productos}}
                 <tr>
-                    <td> {{Nombre}} </td>
+                    <td> {{nombre}} </td>
                     <td> {{Descripcion}} </td>
                     <td> {{Precio}} </td>
                     <td> {{CantidadStock}} </td>
