--- a/src/views/productos/add.hbs
+++ b/src/views/productos/add.hbs
@@ -6,8 +6,12 @@
                     <h3 class="text-uppercase"> Crear Nuevo Producto</h3>
                 </div>
                 <div class="card-body">
-                    <form action="/add" method="post">
+                    <form action="/add" method="post" enctype="multipart/form-data">
 
+                        <div class="input-group mt-2">
+                            <input class="form-control" type="file" name="file" id="file">
+                        </div>
+                        
                         <div class="input-group mt-2">
                             <label for="nombre" class="input-group-text"> Nombre Producto </label>
                             <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Ejemplo: Camiseta" autofocus required >
