--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,15 +1,34 @@
 <main class="mt-5">
     <div class="container">
-        <div class="card mx-auto" style="width: 600px;">
-            <div class="card-header">
-                <img src="/img/logo.png" alt="logo" class="card-img-top mx-auto m-2 rounded-circle" style="width: 350px; heigth: 350px; display: block;">
-                <h3 class="text-uppercase text-center p-4">Ultima Etiqueta</h3>
-            </div>
-            <div class="card-body text-center">
-                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
-
-                <a href="/add" class="btn btn-primary">Agregar producto</a>
+        <div class="row">
+            <div class="col">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./img/sandalias.jpg" class="d-block w-100" alt="Slide 1" >
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/Conjuntoo.jpg" class="d-block w-100" alt="Slide 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/Llavero.jpg" class="d-block w-100" alt="Slide 3">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </div>
+
+        <footer class="footer text-center mt-4">
+        <p>&copy; 2024 Creado por Erick Delgado. Todos los derechos reservados.</p>
+    </footer>
+
     </div>
 </main>
