--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -16,12 +16,7 @@
                         Suscripciones
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Lista de Precios</a></li>
-                        <li><a class="dropdown-item" href="#">Agregar Precio</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="/list_suscrip">Lista de Suscripciones</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
