--- a/src/views/suscripcion/add_suscrip.hbs
+++ b/src/views/suscripcion/add_suscrip.hbs
@@ -42,4 +42,7 @@
             </div>
         </div>
     </div>
+    <footer class="footer text-center mt-4">
+        <p>&copy; 2024 Creado por Erick Delgado. Todos los derechos reservados.</p>
+    </footer>
 </div>
