--- a/src/views/suscripcion/list_suscrip.hbs
+++ b/src/views/suscripcion/list_suscrip.hbs
@@ -51,4 +51,9 @@
         {{/if}}
 
     </div>
+
+    <footer class="footer text-center mt-4">
+        <p>&copy; 2024 Creado por Erick Delgado. Todos los derechos reservados.</p>
+    </footer>
+    
 </div>
